solucione el error yo solito